# graphics-testing

./: .clang-format  .gitignore  CMakeLists.txt
include/: style_template.h  style_template_class.hxx
lib/: CMakeLists.txt
lib/MSDL/: CMakeLists.txt
lib/MSDL/include/: CMakeLists.txt  msdl.hxx  msdl_error.h  msdl_error.hxx  msdl_event.h  msdl_event.hxx  msdl_surface.h  msdl_surface.hxx  msdl_window.h  msdl_window.hxx
lib/MSDL/lib/: CMakeLists.txt  sdl2-config.cmake
lib/MSDL/src/: CMakeLists.txt  msdl_helpers.h  msdl_helpers.hxx  msdl_surface.cpp  msdl_surface.cxx  msdl_window.cpp  msdl_window.cxx
lib/MSDL/test/: CMakeLists.txt  msdl_surface_test.cpp  test_msdl_surface.cxx
lib/cmake/: test_util.cmake
project/: .clang-format  CMakeLists.txt  build.bat
project/include/: msdl_event.h  msdl_surface.h  msdl_window.h  msdl_windowsurface.h  style_template.h
project/lib/MSDL/: CMakeLists.txt  FindSDL2.cmake
project/lib/MSDL/include/: msdl_event.h  msdl_helpers.h  msdl_surface.h  msdl_window.h
project/libraries/: CMakeLists.txt
project/libraries/MSDL/: CMakeLists.txt
project/libraries/MSDL/include/: msdl_helpers.h  msdl_surface.h
project/libraries/MSDL/source/: msdl_surface.cpp  msdl_window.cpp
project/main/: CMakeLists.txt  main.cpp
project/source/: main.cpp  msdl_surface.cpp  msdl_window.cpp  msdl_windowsurface.cpp
project/src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  main.cxx
